WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231927
WebPDFViewPlaceholder should use a weak delegate
https://bugs.webkit.org/show_bug.cgi?id=231927
Summary
WebPDFViewPlaceholder should use a weak delegate
David Kilzer (:ddkilzer)
Reported
2021-10-18 18:00:18 PDT
WebPDFViewPlaceholder should use a weak delegate.
Attachments
Patch v1
(2.42 KB, patch)
2021-10-18 18:01 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2021-10-18 18:01:30 PDT
Created
attachment 441665
[details]
Patch v1
David Kilzer (:ddkilzer)
Comment 2
2021-10-20 11:49:41 PDT
Comment on
attachment 441665
[details]
Patch v1 Marking cq+ since ios-wk2 won't test this (this affects iOS WK1), and api-ios may not test it either (I don't see any WK1 PDF tests in Tools/TestWebKitAPI/Tests). Both bots are also 8 or 24 hours behind, and any behavior change here would be changing a flakey crashing test into a flakey failing test, so this would likely only need a test expectation update.
EWS
Comment 3
2021-10-20 11:59:30 PDT
Committed
r284559
(
243301@main
): <
https://commits.webkit.org/243301@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 441665
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-10-20 12:00:22 PDT
<
rdar://problem/84473142
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug