WebPDFViewPlaceholder should use a weak delegate <https://webkit.org/b/231927>

Reviewed by Tim Horton.

* WebView/WebPDFViewPlaceholder.h:
(WebPDFViewPlaceholder.delegate):
- Mark property as `weak` instead of `assign`.
* WebView/WebPDFViewPlaceholder.mm:
(WebPDFViewPlaceholder._dataSource):
(WebPDFViewPlaceholder._delegate):
- Mark instance variables as as `_weak` to match `delegate`
  property and based on comment for `_dataSource`.


Canonical link: https://commits.webkit.org/243301@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284559 268f45cc-cd09-0410-ab3c-d52691b4dbfc